--- a/firmowa.html
+++ b/firmowa.html
@@ -59,6 +59,7 @@ $('.nav').mouseleave(function() {
    
     <div id="div1"><section id="section2"><p>Nasze projekty powstają we współpracy z klientem,<br><br> 
         dzięki czemu sprzedajemy produkt jak najbardziej<br><br> dopasowany do jego potrzeb.</p></section> <br>
+
    <section id="section_2"> <a href="http://www.reharmony.pl"><img src="image/reha.jpg" id="reha" class="nav"> </a><br><br>
     </section></div>
 
@@ -68,8 +69,8 @@ $('.nav').mouseleave(function() {
          <img src="image/js.png" > <br><br>
          </section>
 
-    <section id="section4"><div><h1>Jak zamówić?</h1><br>
-    <p>  
+    <section id="section4"><p><h1>Jak zamówić?</h1><br>
+    
    
         1. Zgłoś sie do nas telefonicznie i opisz czego potrzebujesz.<br><br>
         2. Możesz dosłać adresy stron podobnych do tego co jest Ci potrzebne. <br><br>
@@ -79,7 +80,7 @@ $('.nav').mouseleave(function() {
         6. Zawieramy umowę.<br> <br>
         7. Zajmujemy się tworzeniem strony. <br><br>
         8. Uruchamiamy stronę.<br> <br>
-        9. Opiekujemy się stroną, żeby była zawsze dostępna.</p></div><br>
+        9. Opiekujemy się stroną, żeby była zawsze dostępna.</p>
             </section>
 
     <footer id="footer"> 
