--- a/firmowa.html
+++ b/firmowa.html
@@ -54,7 +54,7 @@ $('.nav').mouseleave(function() {
         <span id="section_1span3">Akceptujemy zakup stron na raty.</span> <br><br>
         <span id="section_1span4"> Więcej informacji w <span class="nav"><b>REGULAMINIE.</b> </span></span><br><br>
         <span id="section_1span5"> Zapraszamy do kontaktu.</span> <br><br> 
-        <span id="section_1span6"> tel: +48 660 40 20 11</p></span><br><br><br><br><br><br><br><br>
+        <span id="section_1span6"> tel: +48 660 40 20 11</span></p><br><br><br><br><br><br><br><br>
          </section>
    
     <div id="div1"><section id="section2"><p>Nasze projekty powstają we współpracy z klientem,<br><br> 
@@ -69,8 +69,8 @@ $('.nav').mouseleave(function() {
          <img src="image/js.png" > <br><br>
          </section>
 
-    <section id="section4"><p><h1>Jak zamówić?</h1><br>
-    
+    <section id="section4"><h1>Jak zamówić?</h1><br>
+    <p>
    
         1. Zgłoś sie do nas telefonicznie i opisz czego potrzebujesz.<br><br>
         2. Możesz dosłać adresy stron podobnych do tego co jest Ci potrzebne. <br><br>
