--- a/firmowa.html
+++ b/firmowa.html
@@ -46,6 +46,9 @@ $('.nav').mouseleave(function() {
 </ul>
 
     </nav>
+
+    <p id="stronka">www.prostastronka.com.pl</p>
+
     <section id="section1"><img src="image/foto.jpg" id="foto"></section>
     <section id="section_1">
         <p > 
@@ -84,13 +87,13 @@ $('.nav').mouseleave(function() {
             </section>
 
     <footer id="footer"> 
-    <ul> 
-        <li>Kontakt<br>
-        al Niepodległości 639<br>
-        80-307 Sopot</li>
-        <li>telefon: +48 660 40 20 11</li>
+    <p> 
+        Kontakt:<br>
+        al. Niepodległości 639<br>
+        80-307 Sopot<br>
+        telefon: +48 660 40 20 11
 
-    </ul><a href="#nav"><img src="image/upload.png" ></a></footer>
+    </p><a href="#nav"><img src="image/upload.png" ></a></footer>
 </body>
 </html>
 
