--- a/firmowa.html
+++ b/firmowa.html
@@ -74,16 +74,18 @@ $('.nav').mouseleave(function() {
 
     <section id="section4"><h1>Jak zamówić?</h1><br>
     <p>
-   
-        1. Zgłoś sie do nas telefonicznie i opisz czego potrzebujesz.<br><br>
-        2. Możesz dosłać adresy stron podobnych do tego co jest Ci potrzebne. <br><br>
-        3. Na podstawie Twojego opisu dostaniesz wycenę.<br><br> 
-        4. Tworzymy projekt wstępny graficzny dostosowany do Twoich oczekiwań.<br><br> 
-        5. Po akceptacji projektu ustalamy formę płatności oraz czas trwania umowy.<br><br>
-        6. Zawieramy umowę.<br> <br>
-        7. Zajmujemy się tworzeniem strony. <br><br>
-        8. Uruchamiamy stronę.<br> <br>
-        9. Opiekujemy się stroną, żeby była zawsze dostępna.</p>
+
+    <section id="section4_1">  1. Zgłoś sie do nas telefonicznie i opisz czego potrzebujesz.</section><br><br>
+    <section id="section4_2">  2. Możesz dosłać adresy stron podobnych do tego co jest Ci potrzebne.</section> <br><br>
+    <section id="section4_3">  3. Na podstawie Twojego opisu dostaniesz wycenę.</section><br><br> 
+    <section id="section4_4">  4. Tworzymy projekt wstępny graficzny dostosowany do Twoich oczekiwań.</section><br><br> 
+    <section id="section4_5">  5. Po akceptacji projektu ustalamy formę płatności oraz czas trwania umowy.</section><br><br>
+    <section id="section4_6">  6. Zawieramy umowę.</section><br> <br>
+    <section id="section4_7"> 7. Zajmujemy się tworzeniem strony.</section> <br><br>
+    <section id="section4_8"> 8. Uruchamiamy stronę.</section><br> <br>
+    <section id="section4_9"> 9. Opiekujemy się stroną, żeby była zawsze dostępna.</section>
+
+</p>
             </section>
 
     <footer id="footer"> 
