--- a/index.html
+++ b/index.html
@@ -4,34 +4,105 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="css/tel.css" rel="stylesheet" media="only screen and (min-width: 0px) and (max-width: 397px)">
-    <link href="css/tablet.css" rel="stylesheet" media="only screen and (min-width: 398px) and (max-width: 499px)">
-    <link href="css/tablet1.css" rel="stylesheet" media="only screen and (min-width: 500px) and (max-width: 823px)">
-    <link href="css/monitor.css" rel="stylesheet" media="only screen and (min-width: 824px)">
+    <link href="css/tel.css" rel="stylesheet" media="only screen and (max-width: 323px)">
+    <link href="css/tablet.css" rel="stylesheet" media="only screen and (min-width: 324px) and (max-width: 822px)">
+    <link href="css/tablet1.css" rel="stylesheet" media="only screen and (min-width: 823px) and (max-width: 1213px)">
+    <link href="css/monitor.css" rel="stylesheet" media="only screen and (min-width: 1214px)">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <title>Firmowa</title>
+    <script>
+$(document).ready(function() {
+$('.nav').mouseenter(function() {
+    $(this).addClass("podswietl");
+});
+$('.nav').mouseleave(function() {
+    $(this).removeClass("podswietl");
+});
+});
+   </script>
+
+        <script>
+        
+        $(document).ready(function(){
+         $("#foto")
+           .animate({ height: "300px" })
+            });
+ 
+        </script>
+
+<script>
+        
+    $(document).ready(function(){
+     $(".nav").click(function() {
+        location.reload();
+     });   
+        });
+
+    </script>
+
 </head>
 <body>
     <nav id="nav">
 <ul> 
-<li><a href="#section1">O nas</a></li>
-<li><a href="#section2">Projekty</a></li>
-<li><a href="#section3">Technologie</a></li>
+<li class="nav"><a href="#section4">Jak zamówić?</a></li>
+<li class="nav"><a href="#section2">Projekty</a></li>
+<li class="nav"><a href="#section3">Technologie</a></li>
+<li class="nav"><a href="#section1">O nas</a></li>
 <li></li>
 
 </ul>
 
     </nav>
-    <section id="section1"><img src="image/foto1.jpg"><br><p> Nasza firma tworzy profesjonalne strony internetowe<br> i wizytówki firmowe na zamówienie. <br>Akceptujemy zakup stron na raty. <br><br>Więcej informacji w REGULAMINIE. <br><br> Zapraszamy do kontaktu. <br><br> tel: +48 660 40 20 11</p><br><br><a href="#section2">Down </a></section>
+
+    <p id="stronka">www.prostastronka.com.pl</p>
+
+    <section id="section1"><img src="image/foto.jpg" id="foto"></section>
+    <section id="section_1">
+        <p > 
+        <span id="section_1span1">Nasza firma tworzy <b>profesjonalne strony internetowe</b></span><br><br>
+        <span id="section_1span2">i wizytówki firmowe na zamówienie. </span><br><br>
+        <span id="section_1span3">Akceptujemy zakup stron na raty.</span> <br><br>
+        <span id="section_1span4"> Więcej informacji w <span class="nav"><b>REGULAMINIE.</b> </span></span><br><br>
+        <span id="section_1span5"> Zapraszamy do kontaktu.</span> <br><br> 
+        <span id="section_1span6"> tel: +48 660 40 20 11</span></p><br><br><br><br><br><br><br><br>
+         </section>
    
-    <section id="section2"><p>Nasze Projekty</p> <br>
-    <a href="http://www.reharmony.pl"><img src="image/reha.jpg" id="reha"> </a><br><br><a href="#section3">Down</a></section>
+    <section id="section2"><p>Nasze projekty powstają we współpracy z klientem,<br><br> 
+        dzięki czemu sprzedajemy produkt jak najbardziej<br><br> dopasowany do jego potrzeb.</p> <br>
+<a href="http://www.reharmony.pl"><img src="image/reha.jpg" id="reha" class="nav"> </a><br><br>
+    </section>
 
-    <section id="section3"> <p>Technologie w jakich pracujemy</p><img src="image/html.png" > <img src="image/jquery.png" ><br> <img src="image/css.png" ><img src="image/response.jpg" > <br> <img src="image/js.png" > <br><br><a href="#section4">Down</a></section>
+    <section id="section3"> <p>Technologie w jakich pracujemy</p>
+        <img src="image/html.png" > <img src="image/jquery.png" ><br
+        > <img src="image/css.png" ><img src="image/response.jpg" > <br>
+         <img src="image/js.png" > <br><br>
+         </section>
 
-    <section id="section4"> <a href="#footer">Down</a></section>
+    <section id="section4"><h1>Jak zamówić?</h1><br>
+    <p>
 
-    <footer id="footer"> <a href="#nav"><img src="image/upload.png" ></a></footer>
+    <section id="section4_1">  1. Zgłoś sie do nas telefonicznie i opisz czego potrzebujesz.</section><br><br>
+    <section id="section4_2">  2. Możesz dosłać adresy stron podobnych do tego co jest Ci potrzebne.</section> <br><br>
+    <section id="section4_3">  3. Na podstawie Twojego opisu dostaniesz wycenę.</section><br><br> 
+    <section id="section4_4">  4. Tworzymy projekt wstępny graficzny dostosowany do Twoich oczekiwań.</section><br><br> 
+    <section id="section4_5">  5. Po akceptacji projektu ustalamy formę płatności oraz czas trwania umowy.</section><br><br>
+    <section id="section4_6">  6. Zawieramy umowę.</section><br> <br>
+    <section id="section4_7"> 7. Zajmujemy się tworzeniem strony.</section> <br><br>
+    <section id="section4_8"> 8. Uruchamiamy stronę.</section><br> <br>
+    <section id="section4_9"> 9. Opiekujemy się stroną, żeby była zawsze dostępna.</section>
+
+</p>
+            </section>
+
+    <footer id="footer"> 
+    <p> 
+        Kontakt:<br>
+        al. Niepodległości 639<br>
+        80-307 Sopot<br>
+        telefon: +48 660 40 20 11
+
+    </p><a href="#nav"><img src="image/upload.png" ></a></footer>
 </body>
 </html>
 
