--- a/firmowa.html
+++ b/firmowa.html
@@ -81,14 +81,14 @@ $('.nav').mouseleave(function() {
     <section id="section4"><h1>Jak zamówić?</h1><br>
     <p>
 
-    <section id="section4_1">  1. Zgłoś sie do nas telefonicznie i opisz czego potrzebujesz.</section><br><br>
-    <section id="section4_2">  2. Możesz dosłać adresy stron podobnych do tego co jest Ci potrzebne.</section> <br><br>
-    <section id="section4_3">  3. Na podstawie Twojego opisu dostaniesz wycenę.</section><br><br> 
-    <section id="section4_4">  4. Tworzymy projekt wstępny graficzny dostosowany do Twoich oczekiwań.</section><br><br> 
-    <section id="section4_5">  5. Po akceptacji projektu ustalamy formę płatności oraz czas trwania umowy.</section><br><br>
-    <section id="section4_6">  6. Zawieramy umowę.</section><br> <br>
-    <section id="section4_7"> 7. Zajmujemy się tworzeniem strony.</section> <br><br>
-    <section id="section4_8"> 8. Uruchamiamy stronę.</section><br> <br>
+    <section id="section4_1">  1. Zgłoś sie do nas telefonicznie i opisz czego potrzebujesz.</section><br>
+    <section id="section4_2">  2. Możesz dosłać adresy stron podobnych do tego co jest Ci potrzebne.</section> <br>
+    <section id="section4_3">  3. Na podstawie Twojego opisu dostaniesz wycenę.</section><br>
+    <section id="section4_4">  4. Tworzymy projekt wstępny graficzny dostosowany do Twoich oczekiwań.</section><br>
+    <section id="section4_5">  5. Po akceptacji projektu ustalamy formę płatności oraz czas trwania umowy.</section><br>
+    <section id="section4_6">  6. Zawieramy umowę.</section><br>
+    <section id="section4_7"> 7. Zajmujemy się tworzeniem strony.</section> <br>
+    <section id="section4_8"> 8. Uruchamiamy stronę.</section><br> 
     <section id="section4_9"> 9. Opiekujemy się stroną, żeby była zawsze dostępna.</section>
 
 </p>
