--- a/firmowa.html
+++ b/firmowa.html
@@ -45,6 +45,7 @@ $('.nav').mouseleave(function() {
 <body>
     <nav id="nav">
 <ul> 
+        <li class="nav"><a href="#section4">Jak zamówić?</a></li>
 <li class="nav"><a href="#section4">Jak zamówić?</a></li>
 <li class="nav"><a href="#section2">Projekty</a></li>
 <li class="nav"><a href="#section3">Technologie</a></li>
