--- a/firmowa.html
+++ b/firmowa.html
@@ -9,6 +9,7 @@
     <link href="css/tablet1.css" rel="stylesheet" media="only screen and (min-width: 823px) and (max-width: 1213px)">
     <link href="css/monitor.css" rel="stylesheet" media="only screen and (min-width: 1214px)">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <title>Firmowa</title>
     <script>
@@ -45,12 +46,11 @@ $('.nav').mouseleave(function() {
 <body>
     <nav id="nav">
 <ul> 
-        <li class="nav"><a href="#section4">Jak zamówić?</a></li>
+<li class="nav"><a href=''><i class="fas fa-align-justify"></i></a></li>
 <li class="nav"><a href="#section4">Jak zamówić?</a></li>
 <li class="nav"><a href="#section2">Projekty</a></li>
 <li class="nav"><a href="#section3">Technologie</a></li>
 <li class="nav"><a href="#section1">O nas</a></li>
-<li></li>
 
 </ul>
     </nav>
