--- a/firmowa.html
+++ b/firmowa.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="css/tel.css" rel="stylesheet" media="only screen and (max-width: 323px)">
-    <link href="css/tablet.css" rel="stylesheet" media="only screen and (min-width: 324px) and (max-width: 822px)">
+    <link href="css/tel.css" rel="stylesheet" media="only screen and (max-width: 349px)">
+    <link href="css/tablet.css" rel="stylesheet" media="only screen and (min-width: 350px) and (max-width: 822px)">
     <link href="css/tablet1.css" rel="stylesheet" media="only screen and (min-width: 823px) and (max-width: 1213px)">
     <link href="css/monitor.css" rel="stylesheet" media="only screen and (min-width: 1214px)">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
@@ -68,8 +68,8 @@ $('.nav').mouseleave(function() {
         <span id="section_1span6"> tel: +48 660 40 20 11</span></p><br><br><br><br><br><br><br><br>
          </section>
    
-    <section id="section2"><p>Nasze projekty powstają we współpracy z klientem,<br><br> 
-        dzięki czemu sprzedajemy produkt jak najbardziej<br><br> dopasowany do jego potrzeb.</p> <br>
+    <section id="section2"><p>Nasze projekty powstają we współpracy z klientem,
+        dzięki czemu sprzedajemy produkt jak najbardziej dopasowany do jego potrzeb.</p> <br>
 <a href="http://www.reharmony.pl"><img src="image/reha.jpg" id="reha" class="nav"> </a><br><br>
     </section>
 
