--- a/firmowa.html
+++ b/firmowa.html
@@ -57,7 +57,7 @@ $('.nav').mouseleave(function() {
 
     <p id="stronka">www.prostastronka.com.pl</p>
 
-    <section id="section1"><img src="image/foto.jpg" id="foto"></section>
+    <section id="section1"><img src="image/foto.jpg" id="foto"></section><br><br><br><br>
     <section id="section_1">
         <p > 
         <span id="section_1span1">Nasza firma tworzy <b>profesjonalne strony internetowe</b></span><br><br>
@@ -68,8 +68,8 @@ $('.nav').mouseleave(function() {
         <span id="section_1span6"> tel: +48 660 40 20 11</span></p><br><br><br><br><br><br><br><br>
          </section>
    
-    <section id="section2"><p>Nasze projekty powstają we współpracy z klientem,
-        dzięki czemu sprzedajemy produkt jak najbardziej dopasowany do jego potrzeb.</p> <br>
+    <section id="section2"><p>Nasze projekty powstają we współpracy z klientem,<br><br>
+        dzięki czemu sprzedajemy produkt <br><br>jak najbardziej dopasowany do jego potrzeb.</p> <br>
 <a href="http://www.reharmony.pl"><img src="image/reha.jpg" id="reha" class="nav"> </a><br><br>
     </section>
 
