--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="css/tel.css" rel="stylesheet" media="only screen and (max-width: 349px)">
-    <link href="css/tablet.css" rel="stylesheet" media="only screen and (min-width: 350px) and (max-width: 822px)">
+    <link href="css/tel.css" rel="stylesheet" media="only screen and (max-width: 499px)">
+    <link href="css/tablet.css" rel="stylesheet" media="only screen and (min-width: 500px) and (max-width: 627px)">
+    <link href="css/tablet2.css" rel="stylesheet" media="only screen and (min-width: 628px) and (max-width: 822px)">
     <link href="css/tablet1.css" rel="stylesheet" media="only screen and (min-width: 823px) and (max-width: 1213px)">
+    
     <link href="css/monitor.css" rel="stylesheet" media="only screen and (min-width: 1214px)">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -78,15 +80,15 @@ $('.nav').mouseleave(function() {
 
     <p id="stronka">www.prostastronka.com.pl</p>
 
-    <section id="section1"><img src="image/foto.jpg" ></section><br>
+    <section id="section1"><img src="image/slonecznik.jpg" ></section><br>
     <section id="section_1">
         <p > 
-        <span id="section_1span1">Nasza firma tworzy <b>profesjonalne strony internetowe</b></span><br><br>
+       <span id="section_1span1">Nasza firma tworzy <b>profesjonalne strony internetowe</b></span><br><br>
         <span id="section_1span2">i wizytówki firmowe na zamówienie. </span><br><br>
         <span id="section_1span3">Akceptujemy zakup stron na raty.</span> <br><br>
         <span id="section_1span4"> Więcej informacji w <span class="regulamin"><b>REGULAMINIE.</b> </span></span><br><br>
-        <span id="section_1span5"> Zapraszamy do kontaktu.</span> <br><br> 
-        <span id="section_1span6"> tel: +48 660 40 20 11</span></p><br><br><br><br><br><br><br><br>
+       <span id="section_1span5"> Zapraszamy do kontaktu.</span> <br><br> 
+     <span id="section_1span6"> tel: +48 660 40 20 11</span></p><br><br><br><br><br><br><br><br>
          </section>
    
     <section id="section2"><p>Nasze projekty powstają we współpracy z klientem,<br><br>
