--- a/firmowa.html
+++ b/firmowa.html
@@ -80,7 +80,7 @@ $('.nav').mouseleave(function() {
 
     <p id="stronka">www.prostastronka.com.pl</p>
 
-    <section id="section1"><img src="image/slonecznik.jpg" ></section><br>
+    <section id="section1"><img src="image/foto.jpg" ></section><br>
     <section id="section_1">
         <p > 
        <span id="section_1span1">Nasza firma tworzy <b>profesjonalne strony internetowe</b></span><br><br>
